FE - Tags Filter Overlap Fix

--- a/front-end/src/base/scss/config/_z-indices.scss
+++ b/front-end/src/base/scss/config/_z-indices.scss
@@ -2,6 +2,7 @@ $z-index-nav: 100;
 $z-index-sidenav-list: $z-index-nav + 1;
 $z-index-sidenav-heading: $z-index-sidenav-list + 1;
 
-$z-index-tags-filter: $z-index-nav + 5;
+$z-index-tags-filter: $z-index-nav - 1;
+$z-index-tags-filter--expanded: $z-index-nav + 4;
 
 $z-index-ifind-loading: $z-index-nav + 100;
